--- a/src/components/Navigation/Nav.scss
+++ b/src/components/Navigation/Nav.scss
@@ -22,7 +22,7 @@ body {
     }
 
     a.active {
-        background-color: #04AA6D;
+        background-color: #04aa6d;
         color: white;
     }
 }
